# rust-pocs

./: .gitignore  Cargo.toml
crates/libs/app-support/: Cargo.toml
crates/libs/app-support/src/: lib.rs
crates/libs/app-support/src/envs/: db_env.rs  mod.rs  oanda_env.rs  stream_env.rs
crates/libs/app-support/src/helpers/: date_formatters.rs  mod.rs  sendable_result.rs
crates/libs/oanda-orm/: Cargo.toml
crates/libs/oanda-orm/src/: lib.rs
crates/libs/oanda-orm/src/_tests/: mod.rs  table_name_test.rs
crates/libs/oanda-orm/src/commands/: candlestick_data_cmds.rs  candlestick_query_log_cmds.rs  mod.rs  order_book_data_cmds.rs  order_book_query_log_cmds.rs  position_book_data_cmds.rs  position_book_query_log_cmds.rs  pricing_stream_data_cmds.rs  pricing_stream_data_log_cmds.rs  pricing_stream_session_cmds.rs
crates/libs/oanda-orm/src/domain/: candlestick_data.rs  candlestick_query_log.rs  mod.rs  order_book_data.rs  order_book_query_log.rs  position_book_data.rs  position_book_query_log.rs  pricing_aggregate_1s.rs  pricing_stream_analysis.rs  pricing_stream_data.rs  pricing_stream_data_log.rs  pricing_stream_session.rs  pricing_stream_session_log.rs
crates/libs/oanda-orm/src/domain/enums/: -stream_event_type.rs  import_type.rs  mod.rs  stream_session_status.rs  stream_session_trigger.rs
crates/libs/oanda-orm/src/schema/: mod.rs  schema_builder.rs
crates/libs/oanda-orm/src/schema/db_cmds/: create_database.rs  create_table.rs  mod.rs  open_connection.rs
crates/libs/oanda-orm/src/schema/table_defs/: create_candlestick_data.rs  create_candlestick_query_log.rs  create_order_book_data.rs  create_order_book_query_log.rs  create_position_book_data.rs  create_position_book_query_log.rs  create_pricing_aggregate_1s.rs  create_pricing_stream_analysis.rs  create_pricing_stream_data.rs  create_pricing_stream_data_log.rs  create_pricing_stream_session.rs  create_pricing_stream_session_log.rs  mod.rs
crates/libs/oanda-sdk/: Cargo.toml
crates/libs/oanda-sdk/src/: lib.rs
crates/libs/oanda-sdk/src/apis/: mod.rs  v3_account.rs  v3_instrument.rs  v3_pricing.rs
crates/libs/oanda-sdk/src/clients/: https_client.rs  mod.rs
crates/libs/oanda-sdk/src/feeds/: candlestick_feed.rs  mod.rs
crates/libs/oanda-sdk/src/models/: account_models.rs  account_order_models.rs  account_position_models.rs  account_trade_models.rs  candlestick_models.rs  client_extensions_model.rs  mod.rs  order_book_models.rs  position_book_models.rs  pricing_models.rs  shared_book_models.rs
crates/libs/oanda-sdk/src/queries/: candlestick_query.rs  mod.rs  pricing_query.rs  pricing_stream_query.rs  shared_book_query.rs
crates/libs/oanda-sdk/src/support/: mod.rs
crates/libs/oanda-sdk/src/support/errors/: mod.rs  query_error.rs  stream_error.rs
crates/libs/oanda-sdk/src/support/helpers/: chrono_helpers.rs  mod.rs  serde_helpers.rs
crates/libs/oanda-sdk/src/support/metrics/: metrics_clock.rs  mod.rs
crates/poc-actix-chat-actorless/: Cargo.toml
crates/poc-actix-chat-actorless/src/: main.rs
crates/poc-actix-chat-actorless/src/app/: mod.rs
crates/poc-actix-chat-actorless/src/chat/: mod.rs  types.rs
crates/poc-actix-chat-actors/: Cargo.toml
crates/poc-actix-chat-actors/src/: service.rs
crates/poc-http-stream/: Cargo.toml
crates/poc-leaky-bucket/: Cargo.toml
crates/poc-leaky-bucket/src/: clock.rs  main.rs  test_client.rs
crates/poc-oanda-v20/: Cargo.toml  example.env
crates/poc-oanda-v20/src/: main.rs  test_dates.rs
crates/poc-ratelimter/: Cargo.toml
crates/poc-ratelimter/src/: safe_client.rs
crates/poc-seaorm/: Cargo.toml
crates/poc-seaorm/src/commands/: create_database.rs  create_table.rs  mod.rs
crates/poc-seaorm/src/commands/oanda/: mod.rs
crates/poc-seaorm/src/domain/bakery_chain/: bakery.rs  cake.rs
crates/poc-seaorm/src/schemas/: bakery_chain_schema.rs
crates/poc-stream-scheduler/: Cargo.toml
crates/poc-stream-scheduler/src/mocks/: db_mock.rs  http_mock.rs
crates/poc-stream-scheduler/src/stream/: subscription_monitors.rs  subscription_scheduler.rs  subscription_task.rs
crates/poc-stream-scheduler/src/stream/services/: mod.rs
crates/poc-tokio-messaging/: Cargo.toml
crates/poc-tokio-non-main/: Cargo.toml
crates/poc-tokio-threads/: Cargo.toml
crates/poc-tokio-threads/src/: main.rs  safe_client.rs
crates/poc-tokio-tracing/: Cargo.toml
crates/poc-tokio-tracing/src/: main.rs
crates/poc-yata/: Cargo.toml
crates/poc-yata/src/tests/: mod.rs  test_ema.rs
crates/pocs/actix-chat-actorless/: Cargo.toml
crates/pocs/actix-chat-actorless/src/app/: app_ctx.rs  app_timer.rs
crates/pocs/actix-chat-actorless/src/chat/: handler.rs  server.rs
crates/pocs/actix-chat-actorless/src/http/: mod.rs  routes.rs  server.rs
crates/pocs/actix-chat-actors/: Cargo.toml  README.md
crates/pocs/actix-chat-actors/src/: main.rs  session.rs
crates/pocs/http-stream/: Cargo.toml
crates/pocs/http-stream/src/: https_stream.rs  main.rs
crates/pocs/leaky-bucket/: Cargo.toml
crates/pocs/leaky-bucket/src/: test_agent.rs
crates/pocs/oanda-v20/: Cargo.toml
crates/pocs/oanda-v20/src/: oanda_client.rs
crates/pocs/queue-file/: Cargo.toml
crates/pocs/queue-file/src/: main.rs  models.rs  queue.rs  tasks.rs
crates/pocs/ratelimter/: Cargo.toml
crates/pocs/ratelimter/src/: old_main.rs
crates/pocs/seaorm/: Cargo.toml
crates/pocs/seaorm/src/: main.rs
crates/pocs/seaorm/src/domain/: mod.rs
crates/pocs/seaorm/src/schemas/: mod.rs
crates/pocs/stream-scheduler/: Cargo.toml
crates/pocs/stream-scheduler/src/: main.rs
crates/pocs/stream-scheduler/src/mocks/: mod.rs
crates/pocs/technical-analysis/: Cargo.toml
crates/pocs/technical-analysis/src/: main.rs
crates/pocs/tokio-messaging/: Cargo.toml
crates/pocs/tokio-messaging/src/: main.rs
crates/pocs/tokio-non-main/: Cargo.toml
crates/pocs/tokio-non-main/src/: main.rs
crates/pocs/tokio-threads/: Cargo.toml
crates/pocs/tokio-threads/src/: safe_clock.rs  safe_endpoint.rs
crates/pocs/tokio-tracing/: Cargo.toml
crates/pocs/tokio-tracing/src/: tracing_writer.rs
crates/pocs/yata/: Cargo.toml
(+13 files in other folders)
