[workspace]
name = "rust-pocs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


members = [
    "crates/libs/*",
    "crates/pocs/*",
]
[workspace.dependencies]
chrono = {  version = "0.4.34", features = ["serde"] }
chrono-tz = "0.8.6"

serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
tokio = {  version = "1.36.0", features = ["full"] }