[package]
name = "poc-actix-chat-actorless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#actix-files.workspace = true
#actix-web.workspace = true
#actix-ws.workspace = true
#
#env_logger.workspace = true
#futures-util.workspace = true
#log.workspace = true
#rand.workspace = true
#tokio = { workspace = true, features = ["rt", "time", "macros"] }

actix-files = "0.6.5"
actix-web = "4.5.1"
actix-ws = "0.2.5"
chrono = { version = "0.4.33", features = ["serde"] }
chrono-tz = "0.8.5"
futures-util = "0.3.30"
env_logger = "0.11.1"
log = "0.4.20"
rand = "0.8.5"
tokio = {  version = "1.36.0", features = ["full"] }