[package]
name = "poc-actix-chat-actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#actix.workspace = true
#actix-broker.workspace = true
#actix-files.workspace = true
#actix-web.workspace = true
#actix-web-actors.workspace = true
#
#env_logger.workspace = true
#log.workspace = true
#rand.workspace = true

actix = "0.13.3"
actix-broker = "0.4.3"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
env_logger = "0.11.1"
log = "0.4.20"
rand = "0.8.5"
