[package]
name = "poc-ratelimter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratelimit = "0.7.0"
hyper = { version = "0.14.27", features=["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.32.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "time"
]}
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-subscriber = {version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"