[package]
name = "poc-stream-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
chrono-tz = "0.8.5"
futures = "0.3.30"
tokio = { version = "1.35.1", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "time"
]}
