[package]
name = "oanda-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
rust_decimal = "1.32.0"
hyper = { version = "0.14.27", features=["full"] }
hyper-tls = "0.5.0"
ratelimit = "0.7.0"
serde = "1.0.188"
serde_derive = "1.0.177"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features=["full"] }
futures = "0.3.30"

app-support = { path = "../app-support" }