[package]
name = "file_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

queue-file = "1.4.10"

chrono = { workspace = true }
chrono-tz = {  workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
