[package]
name = "tokio-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-appender = "0.2.3"
#tracing-log = { version = "0.2.0", features = []}
tracing-subscriber = {  version = "0.3.18", features = ["json"] }

